--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_ConfirmationPopupBox.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_ConfirmationPopupBox.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="confirmation-popupbox" style="display: none;">
+﻿<div class="popupbox confirmation-popupbox" style="display: none;">
 	<div>
 		<span class="confirmation-popupbox-maintext"></span>
 	</div>
