--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 	<link href="~/Content/Dzieuo.css" rel="stylesheet" />
 </head>
 <body>
-	<div id="mainContainer">
+	<div id="appContainer">
 		<div id="spinnerContainer">
 			<span id="spinnerText"></span>
 		</div>
