--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
@@ -14,7 +14,7 @@
 	<header>
 	</header>
 
-	<div id="mainContainer">
+	<div id="appContainer">
 		<div id="spinnerContainer">
 			<span id="spinnerText"></span>
 		</div>
