--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -96,7 +96,7 @@ MEDIA QUERIES
 		margin-bottom: 40px;
 	}
 
-		#calendarDayDetailsTable .table-details-head {
+		#detailsDayTable .table-details-head {
 		padding-top: 0;
 	}
 }
