layout for mobile

--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -2,117 +2,8 @@
 MEDIA QUERIES
 */
 
-@media (max-width: 1300px) {
-	.event-block {
-		box-shadow: none;
-	}
-
-	.current-month-cell {
-		box-shadow: none;
-	}
-
-	.slick-contact-form {
-		box-shadow: none;
-	}
-
-	.year-name-container {
-		box-shadow: none;
-	}
-
-	.current-month-name-calendar {
-		box-shadow: none;
-	}
-
-	.today-day-header-calendar {
-		box-shadow: none;
-	}
-
-	.event-kind-tag {
-		box-shadow: none;
-	}
-
-	#registerPageContainer {
-		box-shadow: none;
-	}
-
-	#loginPageContainer {
-		box-shadow: none;
-	}
-
-	#eventHoverContainer {
-		box-shadow: none;
-	}
-
-	.event-block-container {
-		width: 45%;
-	}
-}
-
-@media (max-width: 800px) {
-	.event-block-container {
-		width: 98%;
-	}
-
-	#lobbyLogo {
-		background-image: url(../Images/Logo/kkLogo.png);
-		background-size: contain;
-		position: absolute !important;
-		background-repeat: no-repeat;
-		width: 320px;
-		top: 14px;
-	}
-
-	#layoutLogo {
-		background-image: url(../Images/Logo/kkLogo.png);
-		background-size: contain;
-		position: absolute !important;
-		background-repeat: no-repeat;
-		width: 320px;
-		top: 14px;
-	}
-
-	.login-bar-container {
-		text-align: center;
-		top: 90px;
-		margin: 0;
-	}
-
-	#loginPageContainer {
-		width: 100%;
-		margin-left: 0;
-	}
-
-	#registerPageContainer {
-		width: 100%;
-		margin-left: 0;
-	}
-
-	#lobbyQuoteContainer {
-		font-size: 1.6em;
-	}
-
-	#lobbyQuoteAndNavSection {
-		margin-top: 120px;
-		margin-bottom: 40px;
-	}
-
-		#detailsDayTable .table-details-head {
-		padding-top: 0;
-	}
-}
-
-@media (max-width: 320px) {
-	#lobbyLogo {
-		width: 250px;
-		top: 14px;
-	}
-
-	#layoutLogo {
-		width: 250px;
-		top: 14px;
-	}
-
-	.login-bar-container {
-		top: 80px;
-	}
+@media (max-width: 460px) {
+  #lobbyLogo img {
+    width: 200px;
+  }
 }
