added xs-hide class

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -82,6 +82,8 @@
 	    'row_scroll_padding_top': 20
 	  });
 
+	  $("#dzVerticalPaging").addClass("xs-hide");
+
 		//used in jquery.superslides to initialize Masonry grid plugin when superslides fades in.
 		window.initializeEventGrid = PROGRAM.initializeEventGrid;	
 		PROGRAM.initializeJQueryExtentionMethods(SIMPLE_FILT());
