--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -11,8 +11,15 @@ MEDIA QUERIES
   #lobbyLogo img {
     width: 300px;
   }
+
+  .xs-hide {
+    display: block;
+  }
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
   /* portrait phones */
+  .xs-hide {
+    display: none;
+  }
 }
