--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -15,6 +15,36 @@ MEDIA QUERIES
   .xs-hide {
     display: block;
   }
+
+  #dzNextArrow {
+    top: unset !important;
+    bottom: 32px !important;
+    right: 8px !important;
+  }
+
+    #dzNextArrow img {
+      height: 40px;
+    }
+
+  #dzVerticalNav {
+    bottom: 2px !important;
+    top: unset !important;
+    right: 42px !important;
+  }
+
+    #dzVerticalNav img {
+      width: 40px;
+    }
+
+  #dzVerticalNav {
+    height: 106px;
+  }
+
+  #dzVerticalPaging {
+    right: 48px !important;
+    bottom: 4px !important;
+    top: unset !important;
+  }
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
