--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
@@ -2,6 +2,7 @@
 }
 
   #calendar .dz-column-inner-wrapper {
+    border: 1px solid #F1F1E7;
     margin: auto;
     position: relative;
     width: 80%;
@@ -10,6 +11,7 @@
     display: table;
     table-layout: fixed;
     border-spacing: 1px;
+    background: rgb(250, 250, 240);
   }
 
 #calendarMenuHeader {
@@ -17,8 +19,8 @@
   border-bottom: 1px solid white;
   letter-spacing: 1px;
   font-size: 2.2em;
-  text-align:center;
-  color:#B3B3B3;
+  text-align: center;
+  color: #B3B3B3;
 }
 
 .today-day-header-calendar {
@@ -37,7 +39,6 @@
 }
 
 .current-month-name-calendar {
-
 }
 
 .calendar-header-year-container {
@@ -92,7 +93,7 @@
   position: relative;
   border: 1px solid white;
   /*background:rgb(228, 225, 214);*/
-  background:rgb(210, 210, 188);
+  background: rgb(210, 210, 188);
 }
 
 .calendar-cell {
@@ -162,17 +163,17 @@
   }
 
 
-.current-month-cell .cell-span-container .cell-month-name-span {
-  color: rgb(184, 184, 184);
-}
+    .current-month-cell .cell-span-container .cell-month-name-span {
+      color: rgb(184, 184, 184);
+    }
 
-.current-month-cell span {
-  color: rgb(109,109,109);
-  position: absolute;
-  padding-left: 2px;
-  padding-right: 5px;
-  top: 4px;
-}
+  .current-month-cell span {
+    color: rgb(109,109,109);
+    position: absolute;
+    padding-left: 2px;
+    padding-right: 5px;
+    top: 4px;
+  }
 
 .today-cell {
   background: #FFFFFF !important;
@@ -196,7 +197,7 @@
   table-layout: fixed;
   width: 100%;
   /*background:rgb(232, 232, 228);*/
-  background:#E8E8D4;
+  background: #E8E8D4;
 }
 
 .addNewEvent-cellIcon {
