--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="dz-row">
-  <header style="overflow:hidden;">
+  <header style="overflow:hidden;background:#E8E8D4;">
     <div id="lobbyLogo">
       <img src="~/Images/Logo/kkLogo.png" alt="logo" />
     </div>
@@ -18,7 +18,7 @@
 <section class="dz-row" style="height:100px;">
   <div id="addPrivateEventBtn" class="hover-cursor-pointer" style="display:none;" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
 </section>
-<section class="dz-row">
+<section class="dz-row" style="overflow:hidden;">
   <header class="section-title">Nadchodzące wydarzenia</header>
   <section id="lobbyTableOfEventsSection">
 
