--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -26,7 +26,7 @@ MEDIA QUERIES
   }
 
   #lobbyLogo img {
-    width: 80%;
+    width: 100%;
   }
 
   .xs-hide {
@@ -71,6 +71,10 @@ MEDIA QUERIES
 
   #dzVerticalPaging {
     right: 48px !important;
+  }
+
+  #lobbyNavContainer {
+    text-align: center;
   }
 }
 
