--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsDayTable.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsDayTable.cshtml
@@ -1,18 +1,18 @@
 ﻿<div class="details-day-table-head">
   <div>7<span class="small-minutes">00</span></div>
-  <div>8<span class="small-minutes">00</span></div>
+  <div>8<span class="small-minutes sm-hide">00</span></div>
   <div>9<span class="small-minutes">00</span></div>
-  <div>10<span class="small-minutes">00</span></div>
+  <div>10<span class="small-minutes sm-hide">00</span></div>
   <div>11<span class="small-minutes">00</span></div>
-  <div>12<span class="small-minutes">00</span></div>
+  <div>12<span class="small-minutes sm-hide">00</span></div>
   <div>13<span class="small-minutes">00</span></div>
-  <div>14<span class="small-minutes">00</span></div>
+  <div>14<span class="small-minutes sm-hide">00</span></div>
   <div>15<span class="small-minutes">00</span></div>
-  <div>16<span class="small-minutes">00</span></div>
+  <div>16<span class="small-minutes sm-hide">00</span></div>
   <div>17<span class="small-minutes">00</span></div>
-  <div>18<span class="small-minutes">00</span></div>
+  <div>18<span class="small-minutes sm-hide">00</span></div>
   <div>19<span class="small-minutes">00</span></div>
-  <div>20<span class="small-minutes">00</span></div>
+  <div>20<span class="small-minutes sm-hide">00</span></div>
   <div style="position: absolute; right: 48px; width: 12px;"><span>21</span><span class="small-minutes">00</span></div>
 </div>
 <div class="details-day-table-body">
