--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -12,10 +12,6 @@ MEDIA QUERIES
     font-size: .65em;
   }
 
-  .calendar-hours {
-    height: 0px;
-  }
-
   .weekday {
     padding-top: 2px;
   }
@@ -60,7 +56,7 @@ MEDIA QUERIES
   }
 
   .sm-hide {
-    display: none;
+    display: none !important;
   }
 
   .sm-show {
