--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="dz-row">
-  <header style="overflow:hidden;background:#E8E8D4;">
+  <header style="overflow:hidden;background:rgb(232, 232, 228);">
     <div id="lobbyLogo">
       <img src="~/Images/Logo/kkLogo.png" alt="logo" />
     </div>
