--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -69,8 +69,7 @@ fieldset {
 }
 
 #lobby .dz-column-inner-wrapper {
-  border-right: 1px solid #F1F1E7;
-  /*background: rgb(250, 250, 240);*/
+  border-right: 1px solid #F3F3F3;
   background: rgb(247, 247, 247);
   width: 85%;
 }
@@ -101,7 +100,7 @@ fieldset {
 }
 
 .lobby-quote {
-  color: #CAC3AD;
+  color: #B7B7AF;
   font-size: 2em;
   line-height: 1;
 }
@@ -137,7 +136,8 @@ fieldset {
 }
 
 #lobbyTableOfEventsSection {
-  /*background: rgb(250, 250, 240);*/
+  border-top: 1px solid #E8E8E8;
+  padding-top: 10px;
 }
 
 .events-menu-container {
@@ -149,13 +149,13 @@ fieldset {
   display: inline-block;
   position: relative;
   margin-bottom: 20px;
-  background: #FDFDF9;
-  border: 2px solid rgb(228, 224, 209);
+  background: #E8E8E4;
+  border: 1px solid rgb(226, 226, 226);
 }
 
 .menu-item {
   height: 0px;
-  color: rgb(133, 123, 100);
+  color: rgb(76, 76, 76);
   font-size: 1em;
   margin-bottom: 20px;
   width: 100px;
@@ -199,7 +199,7 @@ fieldset {
 
 .menu-item-number-upcoming {
   font-size: 3em;
-  color: rgb(173, 165, 137);
+  color: rgb(148, 148, 148);
 }
 
 .display-events-overview-container {
@@ -646,8 +646,7 @@ fieldset {
 .section-title {
   font-size: 2em;
   color: #5D5D59;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #EAEADC;
+  border-bottom: 1px solid #FFFFFF;
   text-align: center;
 }
 
