--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -15,7 +15,7 @@
 	</section>
 </section>
 <section class="dz-row" style="height:200px;">
-	<div id="addPrivateEventBtn" class="hover-cursor-pointer" style="display:none;" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
+	<div id="addPrivateEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
 </section>
 <section class="dz-row">	
 	<header class="section-title">Nadchodzące wydarzenia</header>
