--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
@@ -1,211 +1,209 @@
 ﻿#calendar {
 }
 
-  #calendar .dz-column-inner-wrapper {
-    margin: auto;
-    position: relative;
-    width: 80%;
-    height: 100%;
-    color: rgb(177,177,177);
-    display: table;
-    table-layout: fixed;
-    border-spacing: 1px;
-  }
+	#calendar .dz-column-inner-wrapper {
+		margin: auto;
+		position: relative;
+		width: 80%;
+		height: 100%;
+		color: rgb(177,177,177);
+		display: table;
+		table-layout: fixed;
+		border-spacing: 1px;
+	}
 
 #calendarMenuHeader {
-  display: table-caption;
-  border-bottom: 1px solid white;
-  letter-spacing: 1px;
-  font-size: 2.2em;
-  text-align:center;
-  color:#B3B3B3;
+	display: table-caption;
+	border-bottom: 1px solid white;
+	letter-spacing: 1px;
+	font-size: 2.2em;
+	text-align: center;
+	color: #B3B3B3;
 }
 
 .today-day-header-calendar {
-  display: inline-block;
+	display: inline-block;
 }
 
 .month-name-calendar {
-  color: gray;
-  text-decoration: underline;
+	color: gray;
+	text-decoration: underline;
 }
 
 .month-name-container {
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
+	display: inline-block;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .current-month-name-calendar {
-
 }
 
 .calendar-header-year-container {
-  display: inline-block;
+	display: inline-block;
 }
 
 .year-name-container {
-  display: inline-block;
+	display: inline-block;
 }
 
 .weekday-container {
-  display: table-row;
-  color: gray;
+	display: table-row;
+	color: gray;
 }
 
 .weekday {
-  display: table-cell;
-  text-align: center;
-  padding-top: 10px;
+	display: table-cell;
+	text-align: center;
+	padding-top: 10px;
 }
 
 .current-weekday {
-  color: black;
-  font-weight: bold;
+	color: black;
+	font-weight: bold;
 }
 
 .calendar-hours {
-  width: 100%;
-  height: 14px;
-  display: table-cell;
-  overflow: hidden;
-  color: rgb(97, 85, 85);
-  position: relative;
-  padding-bottom: 2px;
-  border-bottom: 1px solid white;
+	width: 100%;
+	height: 14px;
+	display: table-cell;
+	overflow: hidden;
+	color: rgb(97, 85, 85);
+	position: relative;
+	padding-bottom: 2px;
 }
 
 .hour {
-  font-size: 10px;
-  position: absolute;
+	font-size: 10px;
+	position: absolute;
 }
 
 .calendar-row {
-  /* height: 84px; */
-  width: 100%;
-  margin: auto;
-  display: table-row;
-  position: relative;
+	/* height: 84px; */
+	width: 100%;
+	margin: auto;
+	display: table-row;
+	position: relative;
 }
 
 .other-month-cell {
-  position: relative;
-  border: 1px solid white;
-  /*background:rgb(228, 225, 214);*/
-  background:rgb(210, 210, 188);
+	position: relative;
+	border: 1px solid white;
+	/*background:rgb(228, 225, 214);*/
+	background: rgb(210, 210, 203);
 }
 
 .calendar-cell {
-  height: 80px;
-  display: table-cell;
+	height: 80px;
+	display: table-cell;
 }
 
 .calendar-cell-placeholder {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .other-month-cell .cell-span-container {
-  position: relative;
-  top: 56px;
-  height: 25px;
-  z-index: 98;
-  color: white;
-  background: rgb(210, 210, 188);
+	position: relative;
+	top: 56px;
+	height: 25px;
+	z-index: 98;
+	color: white;
+	background: rgb(210, 210, 203);
 }
 
-  .other-month-cell .cell-span-container span {
-    position: absolute;
-    padding-left: 2px;
-    padding-right: 5px;
-    top: 4px;
-  }
+	.other-month-cell .cell-span-container span {
+		position: absolute;
+		padding-left: 2px;
+		padding-right: 5px;
+		top: 4px;
+	}
 
 .addNewEvent-cellIcon {
-  width: 40px;
-  height: 20px;
-  position: absolute;
-  right: 1px;
-  top: 2px;
-  text-align: center;
-  display: none;
-  z-index: 99;
+	width: 40px;
+	height: 20px;
+	position: absolute;
+	right: 1px;
+	top: 2px;
+	text-align: center;
+	display: none;
+	z-index: 99;
 }
 
 .dark-icon {
-  color: white;
+	color: white;
 }
 
 .light-icon {
-  background: rgb(225, 225, 225);
+	background: rgb(225, 225, 225);
 }
 
 .cell-line-style {
-  position: absolute;
-  width: 1px;
+	position: absolute;
+	width: 1px;
 }
 
 .current-month-cell {
-  border: 2px solid white;
-  background-color: rgb(253,253,253);
-  color: black;
-  position: relative;
+	border: 2px solid white;
+	background-color: rgb(253,253,253);
+	color: black;
+	position: relative;
 }
 
-  .current-month-cell .cell-span-container {
-    position: relative;
-    top: 56px;
-    height: 25px;
-    z-index: 98;
-  }
+	.current-month-cell .cell-span-container {
+		position: relative;
+		top: 56px;
+		height: 25px;
+		z-index: 98;
+	}
 
 
-.current-month-cell .cell-span-container .cell-month-name-span {
-  color: rgb(184, 184, 184);
-}
+		.current-month-cell .cell-span-container .cell-month-name-span {
+			color: rgb(184, 184, 184);
+		}
 
-.current-month-cell span {
-  color: rgb(109,109,109);
-  position: absolute;
-  padding-left: 2px;
-  padding-right: 5px;
-  top: 4px;
-}
+	.current-month-cell span {
+		color: rgb(109,109,109);
+		position: absolute;
+		padding-left: 2px;
+		padding-right: 5px;
+		top: 4px;
+	}
 
 .today-cell {
-  background: #FFFFFF !important;
-  border: 2px solid rgb(154, 149, 134) !important;
+	background: #F7F7F7 !important;
+	border: 2px solid rgb(154, 149, 134) !important;
 }
 
-  .today-cell .cell-span-container {
-    position: relative;
-    top: 56px;
-    height: 24px;
-    z-index: 98;
-    border-top: 1px solid white;
-  }
+	.today-cell .cell-span-container {
+		position: relative;
+		top: 56px;
+		height: 24px;
+		z-index: 98;
+		border-top: 1px solid white;
+	}
 
-    .today-cell .cell-span-container span {
-      color: gray;
-    }
+		.today-cell .cell-span-container span {
+			color: gray;
+		}
 
 #calendarWidget {
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-  /*background:rgb(232, 232, 228);*/
-  background:#E8E8D4;
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	/*background:rgb(232, 232, 228);*/
+	background: #E8E8D4;
 }
 
 .addNewEvent-cellIcon {
-  width: 40px;
-  height: 20px;
-  position: absolute;
-  right: 1px;
-  top: 2px;
-  text-align: center;
-  display: none;
-  z-index: 99;
+	width: 40px;
+	height: 20px;
+	position: absolute;
+	right: 1px;
+	top: 2px;
+	text-align: center;
+	display: none;
+	z-index: 99;
 }
