--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -3,8 +3,8 @@
 <div id="addNewEventContainer" class="popupbox" style="display:none;">
 
   <div class="popupbox-header">
-    <span class="red-color hover-cursor-pointer" data-bind="click: $root.closeAddNewEventPopupOnClick">
-      zamknij
+    <span class="btn-close red-color hover-cursor-pointer" data-bind="click: $root.closeAddNewEventPopupOnClick">
+      x
     </span>
   </div>
 
@@ -160,8 +160,8 @@
               </div>
             </div>
 
-            <div id="btnAddNewEvent" class="btn-add hover-cursor-pointer" data-bind="click: $root.addEventOnClick">
-              dodaj
+            <div id="btnAddNewEvent" class="green-color btn-add hover-cursor-pointer" data-bind="click: $root.addEventOnClick">
+              +
             </div>
           </div>
         </fieldset>
