--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div id="appContainer">
-		<div id="spinnerContainer">
+		<div id="spinnerContainer" style="display:none;">
 			<span id="spinnerText"></span>
 		</div>
     <div class="page-overlay" style="display:none;"></div>
