--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.MainViewModel
 
-<div id="dzieuo">
+<div id="dzieuo" style="display: none;">
 
 	<section id="lobby" class="dz-column">
 		@Html.Partial( "_Lobby" )
@@ -75,21 +75,56 @@
 		//////////////////////////
 		var indexViewModel = @Html.Raw( Json.Encode( @Model.IndexViewModel ) );
 		var userName = '@User.Identity.Name.ToLower()';
+		var PROGRAM = Program;
 
-	  var PROGRAM = Program;
+		var spinner = initializeLoader();
 
-	  $('#dzieuo').dzieuo({
-	    'row_scroll_padding_top': 20
-	  });
+		$('#dzieuo').dzieuo({
+			'row_scroll_padding_top': 20
+		});
 
-	  $("#dzVerticalPaging").addClass("xs-hide");
-
-		//used in jquery.superslides to initialize Masonry grid plugin when superslides fades in.
-		window.initializeEventGrid = PROGRAM.initializeEventGrid;	
+		$("#dzVerticalPaging").addClass("xs-hide");
+	
 		PROGRAM.initializeJQueryExtentionMethods(SIMPLE_FILT());
 		PROGRAM.initializeAndStartSpinner();
-		PROGRAM.initialize(indexViewModel, userName);
+		PROGRAM.initialize(indexViewModel, userName, spinner);
 
+		$("#dzieuo").show();
+
+		function initializeLoader(){
+			//////////////////////////////////////////////////////////
+			//ajax loader (spinner)
+			//////////////////////////////////////////////////////////
+			var opts = {
+				lines: 17, // The number of lines to draw
+				length: 6, // The length of each line
+				width: 4, // The line thickness
+				radius: 20, // The radius of the inner circle
+				corners: 1, // Corner roundness (0..1)
+				rotate: 0, // The rotation offset
+				direction: 1, // 1: clockwise, -1: counterclockwise
+				color: '#FFF', // #rgb or #rrggbb or array of colors
+				speed: 2, // Rounds per second
+				trail: 80, // Afterglow percentage
+				shadow: false, // Whether to render a shadow
+				hwaccel: false, // Whether to use hardware acceleration
+				className: 'spinner', // The CSS class to assign to the spinner
+				zIndex: 2e9, // The z-index (defaults to 2000000000)
+				top: '50%', // Top position relative to parent
+				left: '50%' // Left position relative to parent
+			};
+
+			var spinner = new Spinner(opts);
+
+			var $target = $("#spinnerContainer");
+			var winH = $(window).height();
+			var winW = $(window).width();
+			$target.css('top', winH / 2 - $target.height() / 2);
+			$target.css('left', winW / 2 - $target.width() / 2 - 20);
+
+			spinner.spin($target[0]);
+			return spinner;
+		}
 	});
 
 </script>
