--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="dz-row">
-	<header style="overflow: hidden; background: rgb(232, 232, 228);">
+	<header style="background: rgb(232, 232, 228); width: 101%; border-bottom: 1px solid #FBFBFB;">
 		<div id="lobbyLogo">
 			<img src="~/Images/Logo/kkLogo.png" alt="logo" />
 		</div>
